feat: finish implementing responsive layout

--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -27,7 +27,9 @@ $font-text: 'Open Sans', sans-serif;
 
 
 // Screens
-$width-desktop: 1440px;
-$width-laptop: 768px;
-$width-desktop: 375px;
+$width-laptop: 1200px;
+$width-tablet: 900px;
+$width-tablet-small: 650px;
+$width-mobile: 450px;
+$width-mobile-small: 350px;
 
