--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -27,3 +27,25 @@
     writing-mode: vertical-lr;
     transform: rotate($deg);
 }
+
+// Media-queries
+
+@mixin media-laptop {
+    @media (max-width: $width-laptop) { @content; }
+}
+
+@mixin media-tablet {
+    @media (max-width: $width-tablet) { @content; }
+}
+
+@mixin media-tablet-small {
+    @media (max-width: $width-tablet-small) { @content; }
+}
+
+@mixin media-mobile {
+    @media (max-width: $width-mobile) { @content; }
+}
+
+@mixin media-mobile-small {
+    @media (max-width: $width-mobile-small) { @content; }
+}
