--- a/src/sass/components/_specialties.scss
+++ b/src/sass/components/_specialties.scss
@@ -1,3 +1,7 @@
 .specialties {
     @include bg-img($url: '../assets/img/backgrounds/specialties-bg.png');
+
+    &__controls {
+        margin-top: 20px;
+    }
 }
