--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,10 +10,12 @@
 @import "base/logo";
 @import "base/wrapper";
 @import "base/img";
+@import "base/burger-menu";
 @import "base/working-hous";
 @import "base/button";
 @import "base/socials";
 @import "base/arrow-button";
+@import "base/carousel-controls";
 @import "base/input";
 @import "base/input-date";
 @import "base/input-select";
