--- a/src/sass/base/_subtitle.scss
+++ b/src/sass/base/_subtitle.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-bottom: 15px;
     & .subtitle {
         color: $color-light;
     }
