--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   src: local("Banny Bold Round"), url("../assets/fonts/Banny/Banny-BoldRound.woff") format("woff");
 }
-.gallery__img, .menu__nav > li, .navbar__links li a, .input, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .logo-svg path, .logo-svg {
+.gallery__img, .menu__nav > li, .navbar__links li a, .input, .carousel-controls__control, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .burger-menu_active .burger-menu__line, .burger-menu:after, .burger-menu:before, .burger-menu__line, .logo-svg path, .logo-svg {
   transition: 350ms;
 }
 
@@ -14,7 +14,7 @@
   border-radius: 50%;
 }
 
-.input, .button, .frame {
+.input, .carousel-controls__control, .button, .frame {
   border-radius: 5px;
 }
 
@@ -22,12 +22,25 @@
   border: 1px solid #33333380;
 }
 
-.copyright, .menu__nav > li, .intro, .section-text, .section-subheader, h2 {
+.copyright, .events-contacts, .menu__nav > li, .intro, .section-text, .section-subheader, h2 {
   text-align: center;
 }
 
 .alter-section h2, .alter-section .section-subheader, .alter-section .section-header, .alter-section .section-text, .alter-section .subtitle {
   color: #ffffff;
+}
+
+.burger-menu:after, .burger-menu:before, .burger-menu__line {
+  display: inline-block;
+  position: absolute;
+  background-color: #E8C300;
+  width: 100%;
+  height: 3px;
+}
+
+.burger-menu:after, .burger-menu:before {
+  content: "";
+  position: absolute;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -466,6 +479,11 @@ button {
   right: -12%;
   z-index: 20;
 }
+@media (max-width: 650px) {
+  .frame {
+    border-width: 10px;
+  }
+}
 
 .frame_left {
   left: -12%;
@@ -497,6 +515,16 @@ button {
   width: 100%;
   padding: 50px;
 }
+@media (max-width: 650px) {
+  .img-block {
+    width: 95%;
+  }
+}
+@media (max-width: 450px) {
+  .img-block {
+    padding: 20px;
+  }
+}
 
 .img-container {
   position: relative;
@@ -514,6 +542,40 @@ button {
 .section-img {
   width: 100%;
   box-shadow: 0 0 10px #00000080;
+}
+
+.burger-menu {
+  display: none;
+  margin: 15px 0 0;
+  position: relative;
+  width: 30px;
+  height: 24px;
+  cursor: pointer;
+}
+.burger-menu__line {
+  top: calc(50% - 2px);
+}
+.burger-menu:before {
+  top: 0;
+}
+.burger-menu:after {
+  bottom: 0;
+}
+@media (max-width: 900px) {
+  .burger-menu {
+    display: inline-block;
+  }
+}
+
+.burger-menu_active:before {
+  transform: translateY(10.6px) rotate(-45deg);
+}
+.burger-menu_active:after {
+  transform: translateY(-10.6px) rotate(45deg);
+}
+.burger-menu_active .burger-menu__line {
+  transform: translateX(-100%);
+  opacity: 0;
 }
 
 .working-hours {
@@ -616,6 +678,36 @@ button {
   width: 100%;
 }
 
+.carousel-controls-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.carousel-controls {
+  min-width: 100px;
+  height: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.carousel-controls__control {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  background-color: #ffffff;
+}
+.carousel-controls__control:hover {
+  box-shadow: inset 0 0 0 1px #000000;
+  background-color: #E8C300;
+}
+.carousel-controls__control:active {
+  box-shadow: inset 0 0 0 2px #333333;
+  background-color: #efff0e;
+}
+
 .input {
   width: 100%;
   background-color: #e5e5e5;
@@ -651,6 +743,7 @@ button {
   display: flex;
   justify-content: center;
   align-content: center;
+  margin-bottom: 15px;
 }
 .subtitle-container .subtitle {
   color: #ffffff;
@@ -681,6 +774,14 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.block-layout_reversed {
+  flex-direction: row-reverse;
+}
+@media (max-width: 650px) {
+  .block-layout {
+    flex-direction: column;
+  }
 }
 
 .layout-3-columns {
@@ -733,6 +834,12 @@ nav {
 .navbar__list {
   list-style: none;
   align-items: flex-start;
+  justify-content: space-between;
+}
+@media (max-width: 900px) {
+  .navbar__list .list-column {
+    display: none;
+  }
 }
 
 .list-column {
@@ -755,11 +862,22 @@ nav {
 }
 
 .navbar__logo {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 75px);
   margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: row;
+}
+@media (max-width: 650px) {
+  .navbar__logo {
+    left: calc(50% - 35px);
+  }
+}
+@media (max-width: 650px) {
+  .navbar__logo .logo-svg {
+    width: 70px;
+    height: 70px;
+  }
 }
 
 .intro {
@@ -768,8 +886,19 @@ nav {
   min-height: 700px;
   padding-top: 160px;
 }
+@media (max-width: 650px) {
+  .intro {
+    padding-top: 50px;
+  }
+}
 .intro__header {
   margin: 50px 0 0;
+}
+@media (max-width: 650px) {
+  .intro__header {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .intro__hours {
   display: flex;
@@ -790,9 +919,23 @@ nav {
   font-weight: bold;
   font-size: 1.2rem;
 }
+@media (max-width: 650px) {
+  .intro__hours {
+    writing-mode: horizontal-tb;
+    transform: none;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 15px;
+  }
+}
 .intro__arrow-button {
   margin: 100px 0 0;
   padding-bottom: 10px;
+}
+@media (max-width: 650px) {
+  .intro__arrow-button {
+    margin: 30px 0 0;
+  }
 }
 
 .header__main-title {
@@ -809,13 +952,64 @@ nav {
 .main-title__buttons {
   margin-top: 25px;
 }
+@media (max-width: 650px) {
+  .main-title__buttons button {
+    width: 100%;
+  }
+}
 .main-title__buttons button:last-child {
   margin-left: 40px;
+}
+@media (max-width: 650px) {
+  .main-title__buttons button:last-child {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .main-title__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  .header {
+    font-size: 7.3rem;
+  }
+}
+@media (max-width: 350px) {
+  .header {
+    font-size: 5.6rem;
+  }
 }
 
 .header__socials {
   flex-basis: 5%;
   flex-direction: column;
+}
+@media (max-width: 650px) {
+  .header__socials {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    margin-top: 25px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  .socials-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
+    flex-basis: 220px;
+  }
 }
 
 .our-team {
@@ -827,9 +1021,17 @@ nav {
   background: url("../assets/img/backgrounds/specialties-bg.png") no-repeat center;
   background-size: cover;
 }
+.specialties__controls {
+  margin-top: 20px;
+}
 
 .book-a-table__book-form {
   flex-basis: 47%;
+}
+@media (max-width: 650px) {
+  .book-a-table__book-form {
+    width: 100%;
+  }
 }
 
 .book-form {
@@ -847,6 +1049,18 @@ nav {
 
 .button-submit {
   width: 100%;
+}
+
+@media (max-width: 650px) {
+  .book-a-table__img-block {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .columns-row {
+    flex-direction: column;
+  }
 }
 
 .menu__nav-container {
@@ -931,7 +1145,7 @@ nav {
   transform: rotate(0deg);
   width: 70px;
   height: 100%;
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: normal;
   font-family: "Banny Bold Round", sans-serif;
   text-transform: uppercase;
@@ -945,6 +1159,11 @@ nav {
   top: 0;
   right: 0;
   padding: 30px 10px;
+}
+@media (max-width: 450px) {
+  .private-events__name {
+    font-size: 1.5rem;
+  }
 }
 .private-events__name_rotated-opposite {
   writing-mode: vertical-lr;
@@ -978,15 +1197,40 @@ nav {
 }
 .gallery__img {
   position: relative;
-  min-width: 1%;
-  max-width: 100%;
+  width: 100%;
   cursor: pointer;
   box-shadow: inset 0px 0px 5px 8px #eb1deb;
 }
 
+.gallery-layout {
+  flex-wrap: wrap;
+}
+@media (max-width: 650px) {
+  .gallery-layout > * {
+    flex-basis: 50%;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 450px) {
+  .gallery-layout > * {
+    flex-basis: 100%;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 450px) {
+  .under-contacts-layout {
+    flex-direction: column-reverse;
+  }
+}
 .under-contacts-layout > * {
   flex-basis: 50%;
   align-items: center;
+}
+@media (max-width: 450px) {
+  .under-contacts-layout > * {
+    flex-basis: initial;
+  }
 }
 
 .contact {
@@ -995,12 +1239,23 @@ nav {
 .contact__under-contacts {
   padding-right: 5px;
 }
+@media (max-width: 650px) {
+  .contact__under-contacts {
+    flex-direction: column;
+    margin-top: 15px;
+  }
+}
 .contact__item {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: row;
   height: 100%;
+}
+@media (max-width: 650px) {
+  .contact__item {
+    margin-bottom: 10px;
+  }
 }
 .contact-text {
   font-size: 11px;
@@ -1026,6 +1281,18 @@ nav {
   height: 15px;
   background: url("../assets/icons/contacts/mail.svg") no-repeat center;
   background-size: cover;
+}
+
+@media (max-width: 450px) {
+  .contact-layout {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 450px) {
+  .contact-layout > * {
+    margin-bottom: 10px;
+  }
 }
 
 .contact__map {
