feat: implement navigation on navlinks click

--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -19,4 +19,8 @@
     &:hover {
         background-color: $color-button-colored-hovered;
     }
+
+    &:active {
+        outline: none;
+    }
 }
