--- a/src/sass/components/_intro.scss
+++ b/src/sass/components/_intro.scss
@@ -17,20 +17,18 @@
     }
 
     &__hours {
-        @include flex($justify: flex-end);
-        flex-basis: 5%;
+        @include flex($justify: flex-end, $align: flex-star);
+        flex-basis: 10%;
         @include vertical-rotate($deg: 180deg);
+        @include media-tablet {
+            align-items: center;
+            align-self: center;
+        }
 
         & p {
-            display: flex;
-            align-items: flex-end;
             @include flex($align: flex-end);
             font-weight: bold;
             font-size: 1.2rem;
-        }
-
-        @include media-tablet {
-            padding-left: 45px;
         }
 
         @include media-tablet-small {
@@ -50,15 +48,6 @@
         @include media-tablet-small {
             margin: 30px 0 0;
         }
-    }
-}
-
-.header__main-title {
-    flex-basis: 85%;
-    @include flex($align: center, $direction: column);
-
-    & .main-title__main-header {
-        margin: 10px 0 0;
     }
 }
 
@@ -94,22 +83,44 @@
     @include media-mobile-small {
         font-size: 5.6rem;
     }
-}
 
-.header__socials {
-    flex-basis: 5%;
-    flex-direction: column;
+    &__socials {
+        flex-basis: 10%;
+        flex-direction: column;
 
-    @include media-tablet-small {
-        @include flex($justify: center);
-        margin-top: 25px;
-        width: 100%;
+        @include media-tablet {
+            align-self: center;
+        }
+        @include media-tablet-small {
+            @include flex($justify: center);
+            margin-top: 25px;
+            width: 100%;
+        }
+    }
+
+    &__socials-list {
+        @include flex($direction: column, $align: flex-end);
+
+        @include media-tablet {
+            align-items: center;
+        }
+        @include media-tablet-small {
+            @include flex($justify: space-between);
+            flex-basis: 220px;
+        }
+
+        & .social-ico-ref {
+            margin: 0 0 20px;
+        }
+    }
+
+    &__main-title {
+        flex-basis: 80%;
+        @include flex($align: center, $direction: column);
+    
+        & .main-title__main-header {
+            margin: 10px 0 0;
+        }
     }
 }
 
-.socials-list {
-    @include media-tablet-small {
-        @include flex($justify: space-between);
-        flex-basis: 220px;
-    }
-}
