--- a/src/sass/components/_specialties.scss
+++ b/src/sass/components/_specialties.scss
@@ -1,4 +1,5 @@
 .specialties {
+    position: relative;
     @include bg-img($url: '../assets/img/backgrounds/specialties-bg.png');
 
     &__controls {
