--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import "base/input-textarea";
 @import "base/subtitle";
 @import "base/overlay";
+@import "base/carousel";
 
 @import "layouts/2-columns";
 @import "layouts/3-columns";
