--- a/src/sass/base/_carousel-controls.scss
+++ b/src/sass/base/_carousel-controls.scss
@@ -1,26 +1,24 @@
-.carousel-controls-container {
-    @include flex ($justify: center, $align: center);
-}
 
-.carousel-controls {
-    min-width: 100px;
-    height: 20px;
-    @include flex ($justify: space-between, $align: center);
-
-    &__control {
+.specialties__carousel-indicators {
+    .carousel-controls-panel__control {
         @include size ($width: 20px, $height: 20px);
         @extend %border-radius;
         @extend %transition;
         @extend %cursor-pointer;
         background-color: $color-light;
 
-        &:hover {
-            box-shadow: inset 0 0 0 1px $color-dark;
+        &_active {
             background-color: $color-primary;
         }
 
+        &:hover {
+            box-shadow: inset 0 0 0 1px $color-dark;
+            background-color: $color-primary;
+            opacity: 1;
+        }
+
         &:active {
-            box-shadow: inset 0 0 0 2px $color-add;
+            box-shadow: inset 0 0 0 2px $color-dark;
             background-color: $color-button-colored-hovered;
         }
     }
