--- a/src/sass/base/_frame.scss
+++ b/src/sass/base/_frame.scss
@@ -7,6 +7,8 @@
     border: 20px solid $color-primary;
     filter: drop-shadow(0px 0px 100px #000000);
     @extend %border-radius;
+    top: 50%;
+    transform: translateY(-50%);
     right: -12%;
     z-index: 20;
 
