--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   src: local("Banny Bold Round"), url("../assets/fonts/Banny/Banny-BoldRound.woff") format("woff");
 }
-.gallery__img, .menu__nav > li, .navbar__links li a, .navbar__list, .overlay_active, .overlay, .input, .carousel-controls__control, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .burger-menu_active .burger-menu__line, .burger-menu:after, .burger-menu:before, .burger-menu__line, .logo-svg path, .logo-svg {
+.gallery__img, .menu__nav > li, .navbar__links li a, .navbar__list, .overlay_active, .overlay, .input, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .burger-menu_active .burger-menu__line, .burger-menu:after, .burger-menu:before, .burger-menu__line, .logo-svg path, .logo-svg {
   transition: 350ms;
 }
 
@@ -14,7 +14,7 @@
   border-radius: 50%;
 }
 
-.input, .carousel-controls__control, .button, .frame {
+.input, .specialties__carousel-indicators .carousel-controls-panel__control, .button, .frame {
   border-radius: 5px;
 }
 
@@ -43,7 +43,7 @@
   position: absolute;
 }
 
-.gallery__img, .menu__nav > li, .carousel-controls__control, .arrow-button__container, .button, .burger-menu {
+.gallery__img, .menu__nav > li, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .button, .burger-menu {
   cursor: pointer;
 }
 
@@ -484,6 +484,8 @@ button {
   max-height: 250px;
   border: 20px solid #E8C300;
   filter: drop-shadow(0px 0px 100px #000000);
+  top: 50%;
+  transform: translateY(-50%);
   right: -12%;
   z-index: 20;
 }
@@ -683,32 +685,21 @@ button {
   width: 100%;
 }
 
-.carousel-controls-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-
-.carousel-controls {
-  min-width: 100px;
-  height: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-}
-.carousel-controls__control {
+.specialties__carousel-indicators .carousel-controls-panel__control {
   width: 20px;
   height: 20px;
   background-color: #ffffff;
 }
-.carousel-controls__control:hover {
-  box-shadow: inset 0 0 0 1px #000000;
+.specialties__carousel-indicators .carousel-controls-panel__control_active {
   background-color: #E8C300;
 }
-.carousel-controls__control:active {
-  box-shadow: inset 0 0 0 2px #333333;
+.specialties__carousel-indicators .carousel-controls-panel__control:hover {
+  box-shadow: inset 0 0 0 1px #000000;
+  background-color: #E8C300;
+  opacity: 1;
+}
+.specialties__carousel-indicators .carousel-controls-panel__control:active {
+  box-shadow: inset 0 0 0 2px #000000;
   background-color: #efff0e;
 }
 
@@ -773,6 +764,10 @@ button {
 .overlay_active {
   visibility: visible;
   opacity: 1;
+}
+
+.carousel {
+  position: static;
 }
 
 .layout-2-columns {
@@ -948,14 +943,15 @@ nav {
   display: inline-block;
   position: absolute;
   top: 0;
-  left: calc(50% - 75px);
+  left: 50%;
+  transform: translateX(-50%);
   margin: 10px 0 0;
 }
 @media (max-width: 900px) {
   .navbar__logo {
-    top: 3px;
-    left: calc(50% - 15px);
     margin: 0;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 @media (max-width: 900px) {
@@ -1124,6 +1120,7 @@ nav {
 }
 
 .specialties {
+  position: relative;
   background: url("../assets/img/backgrounds/specialties-bg.png") no-repeat center;
   background-size: cover;
 }
@@ -1144,7 +1141,7 @@ nav {
   width: 100%;
 }
 
-.row > * {
+.row-input > * {
   flex-basis: 49%;
   margin-bottom: 10px;
 }
