--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -8,10 +8,29 @@
 
     &__img {
         @extend %transition;
-        position: relative;
         width: 100%;
+    }
+
+    &__block {
+        position: relative;
         @extend %cursor-pointer;
-        box-shadow: inset 0px 0px 5px 8px rgba(235, 29, 235, 1);
+
+        &::before {
+            content: '';
+            @include size(100%, 100%);
+            @extend %transition;
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 10;
+        }
+
+        &:hover {
+            &:before {
+                box-shadow: inset 0 0 0 5px $color-primary;
+            }
+        }
     }
 }
 
