--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   src: local("Banny Bold Round"), url("../assets/fonts/Banny/Banny-BoldRound.woff") format("woff");
 }
-.gallery__img, .menu__nav > li, .navbar__links li a, .navbar__list, .overlay_active, .overlay, .input, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .burger-menu_active .burger-menu__line, .burger-menu:after, .burger-menu:before, .burger-menu__line, .logo-svg path, .logo-svg {
+.gallery__block::before, .gallery__img, .menu__nav > li, .navbar__links li a, .navbar__list, .overlay_active, .overlay, .input, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .svg-container_instagram:before, .svg-container, .button, .burger-menu_active .burger-menu__line, .burger-menu:after, .burger-menu:before, .burger-menu__line, .logo-svg path, .logo-svg {
   transition: 350ms;
 }
 
@@ -43,7 +43,7 @@
   position: absolute;
 }
 
-.gallery__img, .menu__nav > li, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .button, .burger-menu {
+.gallery__block, .menu__nav > li, .specialties__carousel-indicators .carousel-controls-panel__control, .arrow-button__container, .button, .burger-menu {
   cursor: pointer;
 }
 
@@ -815,6 +815,16 @@ button {
 .layout-3-columns > * {
   flex-basis: calc(100% / 3 - 10px);
 }
+@media (max-width: 900px) {
+  .layout-3-columns > * {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+}
+@media (max-width: 650px) {
+  .layout-3-columns > * {
+    flex-basis: 100%;
+  }
+}
 
 .layout-4-columns {
   width: 100%;
@@ -1203,8 +1213,15 @@ nav {
 
 .menu__table {
   margin: 50px 0 0;
+  flex-wrap: wrap;
+}
+.menu__table > * {
+  flex-basis: calc(100% / 3 - 30px);
 }
 
+.cell {
+  margin-bottom: 20px;
+}
 .cell > * {
   justify-content: flex-start;
   align-items: flex-start;
@@ -1212,7 +1229,7 @@ nav {
 .cell__name {
   position: relative;
   overflow: hidden;
-  flex-basis: 70%;
+  flex-basis: 60%;
 }
 .cell__title, .cell__price {
   font-size: 18px;
@@ -1226,7 +1243,7 @@ nav {
 }
 .cell__price {
   text-align: end;
-  flex-basis: 30%;
+  flex-basis: 40%;
   color: #333333;
 }
 
@@ -1297,9 +1314,23 @@ nav {
   padding: 0;
 }
 .gallery__img {
-  position: relative;
   width: 100%;
-  box-shadow: inset 0px 0px 5px 8px #eb1deb;
+}
+.gallery__block {
+  position: relative;
+}
+.gallery__block::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.gallery__block:hover:before {
+  box-shadow: inset 0 0 0 5px #E8C300;
 }
 
 .gallery-layout {
