--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -38,6 +38,18 @@
     & > * {
         flex-basis: calc(100% / 3 - 30px);
     }
+
+    @include media-tablet {
+        & > * {
+            flex-basis: calc(100% / 2 - 30px);
+        }
+    }
+
+    @include media-tablet-small {
+        & > * {
+            flex-basis: 100%;
+        }
+    }
 }
 
 .cell {
