docs: add more information to README.md file; refactor navigation scroll code; bug fixes

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -31,6 +31,10 @@
     }
 }
 
+.menu__link {
+    user-select: none;
+}
+
 .menu__nav .menu__link_active {
     background-color: $color-primary;
     color: $color-light;
